--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </section>
       </div>
       <footer>
-        <p>This is Cory Snapp's "Zoo Problem"</p>
+        <p>This is Cory Snapp's "Zoo Problem" Assignment</p>
       </footer>
     </main>
   </body>
